gereksiz kodlar silindi

--- a/NorthwindWebApi/appsettings.json
+++ b/NorthwindWebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnection": "Data Source=.;Initial Catalog=NorthwindDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "SqlConnection": "Data Source=HICRETKUS;Initial Catalog=NorthwindDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
