--- a/Northwind.Application/Northwind.Application.csproj
+++ b/Northwind.Application/Northwind.Application.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Abp" Version="8.1.0" />
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.20.0" />
     <PackageReference Include="EntityFrameworkCore.Data.UnitOfWork" Version="7.0.6" />
     <PackageReference Include="EntityFrameworkCore.Data.UnitOfWork.Abstractions" Version="7.0.6" />
